# conda-xdgpatch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  license.md  makefile  poetry.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  funding.yaml
.github/workflows/: dependabot-auto-merge.yaml  lint.yaml  linting.yaml  testing.yaml
.make/: 00-default-help.mak  00-help.mk  01-path.mk  02-dotenv.mk  02-source-env.mk  03-pip.mk  05-git.mak  10-black.mk  10-pep8.mak  11-isort.mk  12-flake8.mk  13-pylint.mk  14-mypy.mk  15-dotenv.mak  16-ruff.mk  17-ipython.mk  18-pyroma.mk  20-pytest.mak  20-pytest.mk  25-sphinx.mak  25-sphinx.mk  30-pre-commit.mak  30-pre-commit.mk  55-poetry.mak  55-poetry.mk  60-readthedocs.mk
docs/: LICENSE  changes.md  changes.rst  code-of-conduct.md  conf.py  contributing.md  contributors.md  contributors.rst  index.rst  license.rst  readme.md  readme.rst  security.md
src/conda_xdgpatch/: __init__.py  patch.py
tests/: conftest.py  test_entrypoints.py  test_init.py
